# stringtheory

./: .gitignore  ARTICULATION_ROUTING_GUIDE.md  BUILD_SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  StringFieldMIDI_Development_Guide.md  TESTING_GUIDE.md
StringFieldMIDI/: CMakeLists.txt  CONDUCTOR_MODE.md  README.md
StringFieldMIDI/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
